--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -9166,6 +9166,13 @@ lstparams "language=Clean,samepage=false"
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 JSON Schema
 \begin_inset CommandInset label
@@ -9177,8 +9184,49 @@ name "sec:JSON-Schema"
 
 \end_layout
 
+\begin_layout Subsection
+Publisher Descriptor
+\end_layout
+
 \begin_layout Standard
-TODO
+This JSON schema
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "JSONSchema"
+literal "false"
+
+\end_inset
+
+ covers the Publisher Descriptor object defined in section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:Publisher-Descriptors"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "publisher.json"
+lstparams "language=JSON,samepage=false"
+
+\end_inset
+
+
 \end_layout
 
 \end_body
