doc: Rename advertising.{svg,png} to broadcasting.{svg,png}
Rename the image advertising.{svg,png} since it tends to trigger
advertising blockers.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -383,7 +383,7 @@ Ease of implementation
 \noindent
 \align center
 \begin_inset Graphics
-	filename advertising.svg
+	filename broadcasting.svg
 	width 80text%
 
 \end_inset
